@@ -22,22 +22,22 @@ public class ResumeTestData {
 //                "Реализация c нуля Rich Internet Application приложения на стеке технологий JPA, Spring, Spring-MVC, GWT, ExtGWT (GXT), Commet, HTML5, Highstock для алгоритмического трейдинга.\n" +
 //                "Создание JavaEE фреймворка для отказоустойчивого взаимодействия слабо-связанных сервисов (SOA-base архитектура, JAX-WS, JMS, AS Glassfish). Сбор статистики сервисов и информации о состоянии через систему мониторинга Nagios. Реализация онлайн клиента для администрирования и мониторинга системы по JMX (Jython/ Django).\n" +
 //                "Реализация протоколов по приему платежей всех основных платежных системы России (Cyberplat, Eport, Chronopay, Сбербанк), Белоруcсии(Erip, Osmp) и Никарагуа.")));
-//        resume.addSection(SectionType.QUALIFICATIONS, new ListSection(Collections.singletonList("JEE AS: GlassFish (v2.1, v3), OC4J, JBoss, Tomcat, Jetty, WebLogic, WSO2\n" +
-//                "Version control: Subversion, Git, Mercury, ClearCase, Perforce\n" +
-//                "DB: PostgreSQL(наследование, pgplsql, PL/Python), Redis (Jedis), H2, Oracle, MySQL, SQLite, MS SQL, HSQLDB\n" +
-//                "Languages: Java, Scala, Python/Jython/PL-Python, JavaScript, Groovy\n" +
-//                "XML/XSD/XSLT, SQL, C/C++, Unix shell scripts\n" +
-//                "Java Frameworks: Java 8 (Time API, Streams), Guava, Java Executor, MyBatis, Spring (MVC, Security, Data, Clouds, Boot), JPA (Hibernate, EclipseLink), Guice, GWT(SmartGWT, ExtGWT/GXT), Vaadin, Jasperreports, Apache Commons, Eclipse SWT, JUnit, Selenium (htmlelements).\n" +
-//                "Python: Django.\n" +
-//                "JavaScript: jQuery, ExtJS, Bootstrap.js, underscore.js\n" +
-//                "Scala: SBT, Play2, Specs2, Anorm, Spray, Akka\n" +
-//                "Технологии: Servlet, JSP/JSTL, JAX-WS, REST, EJB, RMI, JMS, JavaMail, JAXB, StAX, SAX, DOM, XSLT, MDB, JMX, JDBC, JPA, JNDI, JAAS, SOAP, AJAX, Commet, HTML5, ESB, CMIS, BPMN2, LDAP, OAuth1, OAuth2, JWT.\n" +
-//                "Инструменты: Maven + plugin development, Gradle, настройка Ngnix\n" +
-//                "администрирование Hudson/Jenkins, Ant + custom task, SoapUI, JPublisher, Flyway, Nagios, iReport, OpenCmis, Bonita, pgBouncer\n" +
-//                "Отличное знание и опыт применения концепций ООП, SOA, шаблонов проектрирования, архитектурных шаблонов, UML, функционального программирования\n" +
-//                "Родной русский, английский \"upper intermediate\"")));
-//        resume.addSection(SectionType.EXPERIENCE, new OrganizationSection(List.of(new Organization("Alcatel", "https://javaops.ru/", List.of(new Period("Инженер по аппаратному и программному тестированию", "Тестирование, отладка, внедрение ПО цифровой телефонной станции Alcatel 1000 S12 (CHILL, ASM).", LocalDate.of(1997, 7, 1), LocalDate.of(2005, 1, 1)))))));
-//        resume.addSection(SectionType.EDUCATION, new OrganizationSection(List.of(new Organization("Заочная физико-техническая школа при МФТИ", "https://mipt.ru/", List.of(new Period("", "Закончил с отличием", LocalDate.of(1984, 9, 1), LocalDate.of(1987, 6, 1)))))));
+        resume.addSection(SectionType.QUALIFICATIONS, new ListSection(Collections.singletonList("JEE AS: GlassFish (v2.1, v3), OC4J, JBoss, Tomcat, Jetty, WebLogic, WSO2\n" +
+                "Version control: Subversion, Git, Mercury, ClearCase, Perforce\n" +
+                "DB: PostgreSQL(наследование, pgplsql, PL/Python), Redis (Jedis), H2, Oracle, MySQL, SQLite, MS SQL, HSQLDB\n" +
+                "Languages: Java, Scala, Python/Jython/PL-Python, JavaScript, Groovy\n" +
+                "XML/XSD/XSLT, SQL, C/C++, Unix shell scripts\n" +
+                "Java Frameworks: Java 8 (Time API, Streams), Guava, Java Executor, MyBatis, Spring (MVC, Security, Data, Clouds, Boot), JPA (Hibernate, EclipseLink), Guice, GWT(SmartGWT, ExtGWT/GXT), Vaadin, Jasperreports, Apache Commons, Eclipse SWT, JUnit, Selenium (htmlelements).\n" +
+                "Python: Django.\n" +
+                "JavaScript: jQuery, ExtJS, Bootstrap.js, underscore.js\n" +
+                "Scala: SBT, Play2, Specs2, Anorm, Spray, Akka\n" +
+                "Технологии: Servlet, JSP/JSTL, JAX-WS, REST, EJB, RMI, JMS, JavaMail, JAXB, StAX, SAX, DOM, XSLT, MDB, JMX, JDBC, JPA, JNDI, JAAS, SOAP, AJAX, Commet, HTML5, ESB, CMIS, BPMN2, LDAP, OAuth1, OAuth2, JWT.\n" +
+                "Инструменты: Maven + plugin development, Gradle, настройка Ngnix\n" +
+                "администрирование Hudson/Jenkins, Ant + custom task, SoapUI, JPublisher, Flyway, Nagios, iReport, OpenCmis, Bonita, pgBouncer\n" +
+                "Отличное знание и опыт применения концепций ООП, SOA, шаблонов проектрирования, архитектурных шаблонов, UML, функционального программирования\n" +
+                "Родной русский, английский \"upper intermediate\"")));
+        resume.addSection(SectionType.EXPERIENCE, new OrganizationSection(List.of(new Organization("Alcatel", "https://javaops.ru/", List.of(new Period("Инженер по аппаратному и программному тестированию", "Тестирование, отладка, внедрение ПО цифровой телефонной станции Alcatel 1000 S12 (CHILL, ASM).", LocalDate.of(1997, 7, 1), LocalDate.of(2005, 1, 1)))))));
+        resume.addSection(SectionType.EDUCATION, new OrganizationSection(List.of(new Organization("Заочная физико-техническая школа при МФТИ", "https://mipt.ru/", List.of(new Period("", "Закончил с отличием", LocalDate.of(1984, 9, 1), LocalDate.of(1987, 6, 1)))))));
         return resume;
     }
 }
